<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:gravity="center"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/img_pro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:shape="oval"

        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/prof_desimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/addimg_des"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/prof_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/prof_edtusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_shadow"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/prof_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/display_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/prof_edtdisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_shadow"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/display_name"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp" />




    <Button
        android:id="@+id/prof_changepwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/button_changepwd"
        android:textSize="18sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/prof_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:text="@string/button_back"
            android:textSize="18sp" />
        <Button
            android:id="@+id/prof_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_save"
            android:textSize="18sp" />



    </LinearLayout>


</LinearLayout>