<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/prof_curpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/password_cur"
        android:textSize="20sp" />

        <EditText
            android:id="@+id/prof_edtcurpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_shadow"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/password_cur"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="16sp" />

    <TextView
        android:id="@+id/prof_newpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/password_new"
        android:textSize="20sp" />

        <EditText
            android:id="@+id/prof_edtnewpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_shadow"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/password_new"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="16sp" />

    <TextView
        android:id="@+id/prof_despwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/password_des" />

    <TextView
        android:id="@+id/prof_connewpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/password_connew"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/prof_edtconnewpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_shadow"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/password_new"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/prof_back_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:text="@string/button_back"
            android:textSize="18sp" />
        <Button
            android:id="@+id/prof_save_changepwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_save"
            android:textSize="18sp" />



    </LinearLayout>



</LinearLayout>
