<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Register_Usually_Activity">

        <ImageView
            android:id="@+id/reg_img_an"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:shape="oval"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/reg_desimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/addimg_des"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_edtusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_shadow"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/reg_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/display_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_edtdisplayname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_shadow"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/display_name"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/reg_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_edtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_shadow"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/reg_despwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/password_des" />

        <TextView
            android:id="@+id/reg_conpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/password_con"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_edtconfirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_shadow"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/password_con"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
                <Button
                    android:id="@+id/reg_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/button_back"
                    android:textSize="18sp" />
                <Button
                    android:id="@+id/reg_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/button_create"
                    android:textSize="18sp" />
        </LinearLayout>
</LinearLayout>