<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAB3B3"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".LoginActivity"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/layout1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"

        >





        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/cow" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/username"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_shadow"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_shadow"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_button"
            android:textSize="18sp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/register_button"
            android:textSize="18sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/connect_another"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@+id/middle"
                android:background="#000000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@+id/middle"
                android:background="#000000" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/facebook_login"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/facebook_img" />

            <ImageView
                android:id="@+id/google_login"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/google_img" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>